--- a/DemoLibrary_Autofac/DemoLibrary.csproj
+++ b/DemoLibrary_Autofac/DemoLibrary.csproj
@@ -48,9 +48,11 @@
     <Compile Include="IBusinessLogic.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Utility\DataAccess.cs" />
-    <Compile Include="Utility\IDataAccess.cs" />
-    <Compile Include="Utility\ILogger.cs" />
+    <Compile Include="Utility\Interfaces\IDataAccess.cs" />
+    <Compile Include="Utility\Interfaces\ILogger.cs" />
+    <Compile Include="Utility\Interfaces\IWriter.cs" />
     <Compile Include="Utility\Logger.cs" />
+    <Compile Include="Utility\Writer.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
